# workbank-drift-2026

./: .env.example  .gitignore  LICENSE  METHODOLOGY.md  README.md  findings.md  paper.md  pyproject.toml  streamlit_app.py
article-assets/: article.md  article.txt
dashboard/: index.html
dashboard/public/: data.json
data/: RATER2_INSTRUCTIONS.md  benchmarks.yaml  calibration_confirmatory.csv  calibration_rater1.csv  calibration_rater2.csv  calibration_sample.csv  capability_2026.csv  drift_summary.csv  has_drift_2026.csv  spot_check_sample.json  spot_check_sample_1.json
data/calibrators/: calibration_summary.json  cap_isotonic.pkl  has_isotonic.pkl
marketing/: linkedin.md  tweet.md
reports/: agentic_spot_check.md  agentic_spot_check_TODO.md  alt_calibration.md  anchor_audit.md  calibration_full.md  cap_rule_audit.md  demographic_exposure.md  external_joins.md  permutation_test.md  threshold_sensitivity.md  wage_exposure.md  weighted_aggregation.md  yc_remap.md
scripts/: verify_streamlit_proof.py
specs/: 2026-05-21-streamlit-proof.md  2026-07-07-author-posting-fix.md  2026-07-07-git-author-attribution-fix.md  2026-07-07-github-identity-attribution-fix.md  2026-07-07-publish-latest-rerun.md  2026-07-07-rerun-postmortem-analysis.md
src/drift/: build.py  calibrate.py  calibration.py  comet_spot_check.py  fetch.py  oauth.py  rubric.py  score.py  zones.py
