[project]
name = "workbank-drift-2026"
version = "0.1.0"
description = "Recompute Stanford SALT's WORKBank capability column against the April-2026 frontier."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sam Meyer" }]

dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=0.3.0",
    "openai>=1.55.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "datasets>=2.19.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.2",
    "tenacity>=8.5.0",
    "python-dotenv>=1.0.1",
    "krippendorff>=0.7.0",
    "scikit-learn>=1.5.0",
    "httpx>=0.27.0",
    "scipy>=1.17.1",
    "playwright>=1.58.0",
]

[project.scripts]
fetch-workbank       = "drift.fetch:main"
sample-calibration   = "drift.calibration:main"
score-capability     = "drift.score:main"
build-drift-table    = "drift.build:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drift"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
